--- a/ExampleEric/Views/Home/Index.cshtml
+++ b/ExampleEric/Views/Home/Index.cshtml
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body>
-@*     <header>
+    <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom box-shadow mb-3 custom-navbar">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </nav>
-    </header> *@
+    </header>
 
     <div class="container">
         <h1>Bienvenido a Nuestra Página</h1>
